# Harness-Engineering-SDK

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: ARCHITECTURE.md  CORE_ABSTRACTIONS.md  CORE_VS_PLUGIN.md  MULTI_LANGUAGE.md  PLUGIN_SYSTEM.md  SDK_SURFACE.md  architecture.md  benchmarks.md  cli.md  concepts.md  flywheel.md  index.md  quickstart.md  sdk.md
docs/spec/: flywheel.md
docs/stylesheets/: extra.css
examples/: mock_agent.py
examples/agents/: heuristic_edit_agent.py
examples/benchmark_tasks/: github_example_smoke_001.yaml  github_example_smoke_002.yaml
examples/sample_repo/: calculator.py
examples/tasks/: task_001.yaml
harness_runtime/: __init__.py  benchmark.py  cli.py  config.py  flywheel.py  preflight.py  repo.py  schemas.py  sdk.py  skills.py  traces.py
harness_runtime/adapters/: __init__.py  base.py  codex.py  cursor.py  mock.py  registry.py  shell.py
harness_runtime/datasets/: __init__.py  manager.py
harness_runtime/harvesters/: __init__.py  github.py  local.py  providers.py
harness_runtime/reports/: __init__.py  markdown.py
harness_runtime/runners/: __init__.py  local.py
tests/: test_adapters.py  test_benchmark.py  test_cleanup.py  test_eval_batch.py  test_flywheel.py  test_github_eval_dataset.py  test_github_harvest.py  test_issue_providers.py  test_materialize_eval_tasks.py  test_report_generation.py  test_run_artifacts.py  test_task_parsing.py  test_verification.py  test_verification_profiles.py  test_workspace_ref.py  test_workspace_selection.py
(+6 files in other folders)
