[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-runtime"
version = "0.1.0"
description = "Repo-native harness runtime for coding-agent evaluation and improvement loops."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Repo-Native Agent Harness contributors" }
]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.8",
]

[project.scripts]
harness = "harness_runtime.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
